<resources>
    <string name="app_name">Bangkit Academy X FC Barcelona</string>
    <string name="player_name">Player Name</string>
    <string name="player_desc">Player Description</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="place">Place</string>
    <string name="height">Height</string>
    <string name="height_cm">Height cm</string>
    <string name="weight">Weight</string>
    <string name="weight_kg">Weight kg</string>
    <string name="description">Description</string>
    <string name="player_position">Player Position</string>
    <string name="position">Position</string>
    <string name="nationality">Nationality</string>
    <string name="player_nationality">Player Nationality</string>
    <string name="player_number">Player Number</string>
    <string name="number">Number</string>
    <string name="name">Rafi Putra Darmawan</string>
    <string name="email">rafput03@gmail.com</string>
    <string name="about_me">ABOUT ME</string>
    <string name="detailed_info">DETAILED INFO</string>
    <string name="fc_barcelona_player">FC BARCELONA PLAYER</string>
    <string name="dmy">DD/MM/YYYY</string>
    <string-array name="data_name">
        <item>Ter Stegen</item>
        <item>Jules Kounde</item>
        <item>Ronald Araujo</item>
        <item>Pau Cubarsi</item>
        <item>Alejandro Balde</item>
        <item>Frenkie De Jong</item>
        <item>Gavi</item>
        <item>Pedri</item>
        <item>Raphinha</item>
        <item>Lamine Yamal</item>
        <item>Robert Lewandowski</item>
    </string-array>
    <string-array name="data_nationality">
        <item>Germany</item>
        <item>France</item>
        <item>Uruguay</item>
        <item>Spain</item>
        <item>Spain</item>
        <item>Netherland</item>
        <item>Spain</item>
        <item>Spain</item>
        <item>Brazil</item>
        <item>Spain</item>
        <item>Poland</item>
    </string-array>
    <string-array name="data_position">
        <item>Goalkeeper</item>
        <item>Defender</item>
        <item>Defender</item>
        <item>Defender</item>
        <item>Defender</item>
        <item>Midfielder</item>
        <item>Midfielder</item>
        <item>Midfielder</item>
        <item>Forward</item>
        <item>Forward</item>
        <item>Forward</item>
    </string-array>
    <string-array name="data_date">
        <item>30-04-1992</item>
        <item>12-11-1998</item>
        <item>07–03-1999</item>
        <item>22-01-2007</item>
        <item>18-10-2003</item>
        <item>12-05-1997</item>
        <item>05-08-2004</item>
        <item>25-11-2002</item>
        <item>14-12-1996</item>
        <item>13-07-2007</item>
        <item>21-08-1988</item>
    </string-array>
    <string-array name="data_place">
        <item>Mönchengladbach</item>
        <item>Paris</item>
        <item>Rivera</item>
        <item>Bescanó</item>
        <item>Barcelona</item>
        <item>Arkel</item>
        <item>Los Palacios y Villafranca</item>
        <item>Tenerife</item>
        <item>Porto Alegre</item>
        <item>Esplugues de Llobregat</item>
        <item>Warszawa</item>
    </string-array>
    <string-array name="data_height">
        <item>187 cm</item>
        <item>180 cm</item>
        <item>188 cm</item>
        <item>184 cm</item>
        <item>175 cm</item>
        <item>181 cm</item>
        <item>173 cm</item>
        <item>174 cm</item>
        <item>176 cm</item>
        <item>180 cm</item>
        <item>185 cm</item>
    </string-array>
    <string-array name="data_weight">
        <item>85 kg</item>
        <item>75 kg</item>
        <item>79 kg</item>
        <item>75 kg</item>
        <item>69 kg</item>
        <item>74 kg</item>
        <item>70 kg</item>
        <item>60 kg</item>
        <item>68 kg</item>
        <item>72 kg</item>
        <item>81 kg</item>
    </string-array>
</resources>